--- a/application-mircroserice-registory.yml
+++ b/application-mircroserice-registory.yml
@@ -1,30 +1,11 @@
-﻿spring:
-  application:
-    name: config-dev
-  profiles: dev
-server:
+﻿server:
   port: 8600
 eureka:
   instance:
-    hostname: mircroserice-registory
+    hostname: localhost
   client:
     register-with-eureka: false
     fetch-registry: false
     service-url:
       defaultZone: http://eureka8000.com:8600/eureka
 
----
-spring:
-  application:
-    name: config-dev
-  profiles: test
-server:
-  port: 8700
-eureka:
-  instance:
-    hostname: mircroserice-registory
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-    service-url:
-      defaultZone: http://eureka8000.com:8700/eureka
