--- a/application-microservice-gateway.yml
+++ b/application-microservice-gateway.yml
@@ -13,7 +13,11 @@ spring:
     port: 5672
     password: guest
     username: guest
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include: bus-refresh
 zuul:
   host:
     connect-timeout-millis: 15000
