--- a/application-mircroserice-registory.yml
+++ b/application-mircroserice-registory.yml
@@ -9,7 +9,11 @@ eureka:
     fetch-registry: false
     service-url:
       defaultZone: http://eureka8000.com:8600/eureka
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include: bus-refresh
 ---
 server:
   port: 8600
@@ -22,3 +26,8 @@ eureka:
     fetch-registry: false
     service-url:
       defaultZone: http://eureka8000.com:8600/eureka
+management:
+  endpoints:
+    web:
+      exposure:
+        include: bus-refresh
