--- a/application-microservice-gateway.yml
+++ b/application-microservice-gateway.yml
@@ -1,4 +1,4 @@
-﻿server:
+server:
   port: 9000
 eureka:
   client:
@@ -20,18 +20,26 @@ management:
         include: bus-refresh
 zuul:
   host:
-    connect-timeout-millis: 15000
+    connect-timeout-millis: 60000
     socket-timeout-millis: 60000
-  ribbon:
-    eager-load:
-      enabled: false
+ribbon:
+  ReadTimeout: 10000
+  ConnectTimeout: 10000
+
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 2500
   routes:
-    somedepart.serviceId: microservice-login
-    somedepart.path: /loginbus/**
-    homepage.serviceId: microservice-homepage
-    homepage.path: /homepage/**
-    pgewm.serviceId: microservice-pgewm
-    pgewm.path: /pgewm/**
+    loginservice.serviceId: microservice-login
+    loginservice.path: /loginservice/**
+    homepageservice.serviceId: microservice-homepage
+    homepageservice.path: /homepageservice/**
+    pgewmservice.serviceId: microservice-pgewm
+    pgewmservice.path: /pgewmservice/**
   ignored-services: "*"
   prefix: /jxd
 
