--- a/application.yml
+++ b/application.yml
@@ -1,21 +1,11 @@
-﻿spring:
-  profiles:
-    active: dev
----
+server:
+  port: 9999
 spring:
   application:
-    name: config-dev
-  profiles: dev
-management:
-  endpoints:
-    web:
-      exposure:
-        include: bus-refresh
----
-spring:
-  application:
-    name: config-test
-  profiles: test
+    name: config
+  cloud:
+    bus:
+      enabled: true
 management:
   endpoints:
     web:
