--- a/application-mircroserice-registory.yml
+++ b/application-mircroserice-registory.yml
@@ -1,6 +1,5 @@
 ﻿server:
   port: 8600
-  profiles: dev
 eureka:
   instance:
     hostname: mircroserice-registory
@@ -9,15 +8,21 @@ eureka:
     fetch-registry: false
     service-url:
       defaultZone: http://eureka8000.com:8600/eureka
----
-server:
-  port: 8600
-  profiles: dev
-eureka:
-  instance:
-    hostname: mircroserice-registory
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-    service-url:
-      defaultZone: http://eureka8000.com:8600/eureka
+spring:
+  rabbitmq:
+    host: localhost
+    port: 5672
+    password: guest
+    username: guest
+  cloud:
+    bus:
+      refresh:
+        enabled: true
+    config:
+      discovery:
+        service-id: configcenter
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
