--- a/application.yml
+++ b/application.yml
@@ -1,15 +1,8 @@
-﻿spring:
-  profiles:
-    active: dev
-
----
+﻿server:
+  port: 9999
 spring:
-  application:
-    name: config-dev
-  profiles: dev
-
----
-spring:
-  application:
-    name: config-test
-  profiles: test
+  rabbitmq:
+    host: localhost
+    port: 5672
+    password: guest
+    username: guest
